--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <img src="./images/logo.png" alt="баннер"/> 
     </a>
         <nav>
-            <a href="">Акции</a>
-            <a href="">Блюда на неделю</a>
-            <a href="">Категории</a>
-            <a href="">Преимущества</a>
-            <a href="">Контакты</a>
+            <a href="#stock">Акции</a>
+            <a href="#week">Блюда на неделю</a>
+            <a href="#categories">Категории</a>
+            <a href="#advantages">Преимущества</a>
+            <a href="#contacts">Контакты</a>
         </nav>
    
 </header>
@@ -169,11 +169,11 @@
         </a>
         <nav>
             
-            <p >Акции</div>
-            <p>Блюда на неделю</p>
-            <p>Категории</p>
-            <p>Преимущества</p>
-            <p>Контакты</p>
+            <a href="#stock">Акции</a>
+            <a href="#week">Блюда на неделю</a>
+            <a href="#categories">Категории</a>
+            <a href="#advantages">Преимущества</a>
+            <a href="#contacts">Контакты</a>
             </nav>
         </footer>
     </footer>
